src/test/ui/dyn-star/upcast.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/upcast.rs:3:12
   |
LL | #![feature(dyn_star, trait_upcasting)]
   |            ^^^^^^^^
   |
   = note: see issue #91611 <https://github.com/rust-lang/rust/issues/91611> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: `dyn* Foo` needs to be a pointer-sized type
  --> $DIR/upcast.rs:30:23
   |
LL |     let w: dyn* Bar = w;
   |                       ^ `dyn* Foo` needs to be a pointer-sized type
   |
   = help: the trait `PointerSized` is not implemented for `dyn* Foo`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
